# grok-api-mcp

./: .gitignore  README.md  skill.md
cli/: Cargo.toml
cli/src/: main.rs
server/: .env.example  pyproject.toml  server.py
server/tests/: conftest.py  test_server.py
